vclusters-vcluster1.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: vclusters
spec: {}
status: {}
